Fix deprecated instantiations for new Double, Bool, Long, Integer, etc to be compatible with Java 17.