@@ -429,7 +429,7 @@ public class SampleServiceLocalImpl extends BaseServiceLocalImpl implements Samp
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria.forClass(SampleComposition.class);
 		crit.createAlias("sample", "sample");
-		crit.add(Property.forName("sample.id").eq(new Long(sampleId)));
+		crit.add(Property.forName("sample.id").eq(Long.valueOf(sampleId)));
 		crit.setFetchMode("nanomaterialEntityCollection", FetchMode.JOIN);
 		crit.setFetchMode("nanomaterialEntityCollection.fileCollection", FetchMode.JOIN);
 		crit.setFetchMode("nanomaterialEntityCollection.fileCollection.keywordCollection", FetchMode.JOIN);
@@ -466,7 +466,7 @@ public class SampleServiceLocalImpl extends BaseServiceLocalImpl implements Samp
 		CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider.getApplicationService();
 		DetachedCriteria crit = DetachedCriteria.forClass(Characterization.class);
 		crit.createAlias("sample", "sample");
-		crit.add(Property.forName("sample.id").eq(new Long(sampleId)));
+		crit.add(Property.forName("sample.id").eq(Long.valueOf(sampleId)));
 		// fully load characterization
 		crit.setFetchMode("pointOfContact", FetchMode.JOIN);
 		crit.setFetchMode("pointOfContact.organization", FetchMode.JOIN);
@@ -597,7 +597,7 @@ public class SampleServiceLocalImpl extends BaseServiceLocalImpl implements Samp
 	{
 		try {
 			CaNanoLabApplicationService appService = (CaNanoLabApplicationService) ApplicationServiceProvider.getApplicationService();
-			DetachedCriteria crit = DetachedCriteria.forClass(Sample.class).add(Property.forName("id").eq(new Long(sampleId)));
+			DetachedCriteria crit = DetachedCriteria.forClass(Sample.class).add(Property.forName("id").eq(Long.valueOf(sampleId)));
 			crit.setFetchMode("primaryPointOfContact", FetchMode.JOIN);
 			crit.setFetchMode("primaryPointOfContact.organization", FetchMode.JOIN);
 			crit.setFetchMode("otherPointOfContactCollection", FetchMode.JOIN);
